--- a/happynewyear0808.html
+++ b/happynewyear0808.html
@@ -3,13 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>赫恩过年</title>
+    <title>赫恩的新年</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js" type="module"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </head>
 <body>
     <div class="moments-container">
+        <!-- 导航栏部分 -->
+        <nav class="main-nav">
+        <div class="nav-container">
+            <div class="btn-container">
+                <a href="index.html" class="back-btn">&lt;返回目录</a>
+            </div>
+            <div class="nav-logo">
+                <h1>赫恩的新年</h1>
+            </div>
+        </div>
+        </nav>
         <!-- 公开朋友圈 -->
         <div class="moment">
             <div class="user-info">
@@ -215,7 +226,14 @@
                 <div class="divider"></div>
             </div>
         </div>
+        <footer class="site-footer">
+            <div class="footer-content">
+            <p>网页开发：@Binko &nbsp;&nbsp; 文案/插图：@奥利奥 &nbsp;&nbsp; 头像：@多多罗</p>
+            <p>本网站内容纯属虚构，一切角色塑造以官方 @多多罗 为准</p>
+            </div>
+        </footer>
     </div>
     <script src="js/script.js"></script>
+    <script src="js/watermark.js"></script>
 </body>
 </html>
