--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
     <div class="list">
         <ul class="list-links">
             <li><a href="asmr.html">啾飒asmr试营业（迈啾向注意）</a></li>
-            <li><a href="potato.html">孤岛寻踪日常1（文案：@番茄）</a></li>
-            <li><a href="happynewyear0808.html">赫恩的新年（文案&插图：@奥利奥）</a></li>
+            <li><a href="potato.html">孤岛盛宴日常1</a></li>
+            <li><a href="happynewyear0808.html">赫恩的新年</a></li>
         </ul>
     </div>
     <footer class="site-footer">
         <div class="footer-content">
         <p>网页开发：@Binko</p>
-        <p>本网站内容纯属虚构，一切解释以官方为准</p>
+        <p>本网站内容纯属虚构，一切角色塑造以官方为准</p>
         </div>
     </footer>
 </div>
