--- a/potato.html
+++ b/potato.html
@@ -10,6 +10,17 @@
 </head>
 <body>
     <div class="moments-container">
+        <!-- 导航栏部分 -->
+        <nav class="main-nav">
+        <div class="nav-container">
+            <div class="btn-container">
+                <a href="index.html" class="back-btn">&lt;返回目录</a>
+            </div>
+            <div class="nav-logo">
+                <h1>孤岛盛宴日常</h1>
+            </div>
+        </div>
+        </nav>
         <!-- 朋友圈动态1 -->
         <div class="moment">
             <div class="user-info">
@@ -336,6 +347,12 @@
                 <div class="divider"></div>
             </div>
         </div>
+        <footer class="site-footer">
+        <div class="footer-content">
+        <p>网页开发/头像：@Binko &nbsp;&nbsp; 文案：@番茄</p>
+        <p>本网站内容纯属虚构，一切角色塑造以 @土豆岛 后续剧本为准，敬请期待</p>
+        </div>
+    </footer>
     </div>
     <script src="js/script.js"></script>
 </body>
