--- a/sample.html
+++ b/sample.html
@@ -13,12 +13,12 @@
         <!-- 导航栏部分 -->
         <nav class="main-nav">
         <div class="nav-container">
-            <div class="nav-logo">
-            <h1>多多罗朋友圈（同人）（模板）</h1>
+            <div class="btn-container">
+                <a href="index.html" class="back-btn">&lt;返回目录</a>
             </div>
-            <ul class="nav-links">
-            <li><a href="index.html">返回目录</a></li>
-            </ul>
+            <div class="nav-logo">
+                <h1>仿朋友圈模板</h1>
+            </div>
         </div>
         </nav>
         <!-- 公开朋友圈 -->
@@ -233,7 +233,7 @@
         <footer class="site-footer">
         <div class="footer-content">
         <p>网页开发/模板制作：@Binko &nbsp;&nbsp; 文案/图片：@有意提供者</p>
-        <p>本网站内容纯属虚构，一切解释以官方为准</p>
+        <p>本网站内容纯属虚构，一切角色塑造以官方为准</p>
         </div>
         </footer>
     </div>
