--- a/happynewyear0808.html
+++ b/happynewyear0808.html
@@ -14,7 +14,7 @@
         <nav class="main-nav">
         <div class="nav-container">
             <div class="btn-container">
-                <a href="index.html" class="back-btn">&lt;返回目录</a>
+                <a href="javascript:history.back(-1)" class="back-btn">&lt;返回目录</a>
             </div>
             <div class="nav-logo">
                 <h1>赫恩的新年</h1>
